2003-11-21  Kelley Cook  <kcook@gcc.gnu.org>

	* .cvsignore: Delete.

2003-11-20  Joseph S. Myers  <jsm@polyomino.org.uk>

	* Make-lang.in (treelang.extraclean): Delete.

2003-11-20  Joseph S. Myers  <jsm@polyomino.org.uk>

	* Make-lang.in: Remove obsolete comment.

2003-11-03  Kelley Cook  <kcook@gcc.gnu.org>

	* Make-lang.in (dvi): Move targets to $(docobjdir).
	(treelang.dvi): Simplify rule and adjust target.
	(treelang.info): Simplify rule.
	(parse.o): Correct dependencies.
	(TREE_EXE): Delete doubled suffix append.

2003-10-21  Kelley Cook  <kcook@gcc.gnu.org>

	* Make-lang.in (treelang.o): Depend on $(parsedir)/treelang/parse.h.
	(lex.o): Likewise.

2003-10-21  Kelley Cook  <kcook@gcc.gnu.org>

	* Make-lang.in (parse.o): Honor $(parsedir).
	(lex.o): Likewise.
	(lex.c): Likewise
	(parse.c, parse.h): Likewise.
	($(docobjdir)/treelang.info): Replace $(srcdir)/doc with $(docdir).
	(dvi): Likewise.

2003-10-20  Mark Mitchell  <mark@codesourcery.com>

	* Make-lang.in ($(docobjdir)/treelang/treelang.info): Depend on
	stmp-docobjdir.

	* Make-lang.in (info): Use docobjdir.
	($(srcdir)/treelang/treelang.info): Replace with ...
	($(docobjdir)/treelang/treelang.info): ... this.
	(install-info): New target.

2003-10-12  Andreas Jaeger  <aj@suse.de>

	* Make-lang.in (treelang.install-info): Remove reference to
	treelang.info.
	(treelang.): Removed.

2003-10-06  Mark Mitchell  <mark@codesourcery.com>

	* Make-lang.in (treelang.info): Replace with ...
	(info): ... this.
	* Make-lang.in (treelang.dvi): Replace with ...
	(dvi): ... this.

2003-09-21  Richard Henderson  <rth@redhat.com>

	* treetree.c: Revert.

2003-09-21  Richard Henderson  <rth@redhat.com>

	* treetree.c: Update for DECL_SOURCE_LOCATION rename and
	change to const.

2003-07-28  Andreas Jaeger  <aj@suse.de>

	* treetree.c: Convert remaining K&R prototypes to ISO C90.
	* tree1.c: Likewise.
	* parse.y: Likewise.
	* tree-convert.c: Likewise.

2003-07-19  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
