@@ -1,3 +1,8 @@
+2003-11-26  Jason Merrill  <jason@redhat.com>
+
+	* Make-lang.in (treelang.tags): Create TAGS.sub files in each
+	directory and TAGS files that include them for each front end.
+
 2003-11-21  Kelley Cook  <kcook@gcc.gnu.org>
 
 	* .cvsignore: Delete.
